# mcp_server

./: Cargo.toml  README.md
src/: main-server.rs
src/common/: general_mcp_service.rs
